fixed more layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+a {
+    color: black;
+}
 .img-thumbnail{
 	border: 3px solid #efefef;
 	/*background: brown;*/
